// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index renders correctly with greeting 1`] = `
<div>
  <button
    onClick={[Function]}
    styleName="button"
  >
    Navigate to other page
  </button>
  <button
    onClick={[Function]}
    styleName="button"
  >
    Toggle greeting
  </button>
  <span>
    <h1>
      Hello world!
    </h1>
  </span>
</div>
`;

exports[`Index renders correctly without greeting 1`] = `
<div>
  <button
    onClick={[Function]}
    styleName="button"
  >
    Navigate to other page
  </button>
  <button
    onClick={[Function]}
    styleName="button"
  >
    Toggle greeting
  </button>
  <span />
</div>
`;
